--- a/_posts/2015-08-07-test.md
+++ b/_posts/2015-08-07-test.md
@@ -10,7 +10,11 @@ title: Test
 Hey! I'm your first Markdown document in **StackEdit**[^stackedit]. Don't delete me, I'm very helpful! I can be recovered anyway in the **Utils** tab of the <i class="icon-cog"></i> **Settings** dialog.
 
 ----------
-
+```c
+    int i=0;
+    i<3;
+    i++;
+```
 
 Documents
 -------------
