--- a/_posts/2015-08-08-problems.md
+++ b/_posts/2015-08-08-problems.md
@@ -5,11 +5,15 @@ year: 2015
 month: AUG
 day: 08
 subtitle: 在编码过程中遇到的奇怪的问题，自己记录一下
+excerpt: ..
 ---
+
+技术类问题集合
+=====
 
 Jekyll无法正确解析
 ----------
 
-> 这个问题曾经困扰了我半个下午，弄了好半天才明白。
+> 这个问题曾经困扰了我半个下午，弄了好一阵才明白。
 > Jekyll解析对编码格式好像很敏感。我用Nodepad++编写了网页代码，用UTF-8格式储存，显示出的页面特别奇怪，把编码格式换成**UTF-8无BOM格式**就解决了。
 > 虽然解决了问题，但是依然不太理解。
