--- a/_posts/2015-08-08-problems.md
+++ b/_posts/2015-08-08-problems.md
@@ -2,13 +2,13 @@
 layout: post_layout
 title: 技术类问题集合
 year: 2015
-month: AUG
+month: Aug
 day: 08
-subtitle: 在编码过程中遇到的奇怪的问题，自己记录一下
-excerpt: ..
+subtitle: 在编码过程中遇到的奇怪的问题，自己记录一下，以免再犯错误
+excerpt: &nbsp
 ---
 
-技术类问题集合
+**技术类问题集合**
 =====
 
 Jekyll无法正确解析
