--- a/_posts/2015-08-08-problems.md
+++ b/_posts/2015-08-08-problems.md
@@ -4,8 +4,8 @@ title: 技术类问题集合
 year: 2015
 month: Aug
 day: 08
-subtitle: 在编码过程中遇到的奇怪的问题，自己记录一下，以免再犯错误
-excerpt: &nbsp
+subtitle: &nbsp
+excerpt: 在编码过程中遇到的奇怪的问题，自己记录一下，以免再犯错误
 ---
 
 **技术类问题集合**
